<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9CFFFFFF">


    <uk.wearlab.activityrecognition.helpers.AutoFitTextureView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/textureView" />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
             android:layout_weight="30"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_info_view"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:background="#9CFFFFFF"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:weightSum="100">

        <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="30"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/bottom_info_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="#9CFFFFFF"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/threads"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            <NumberPicker
                    android:id="@+id/np"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/modelLayout"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/modelLabel"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            <ListView
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

            </ListView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/deviceLayout"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/deviceLabel"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            <ListView
                    android:id="@+id/device"
                    android:layout_width="match_parent"
                    android:layout_height="180dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
